ElementVisibilityObserver: get rid of reference cycle.

BUG=627539
R=mlamouri@chromium.org,zqzhang@chromium.org

Review-Url: https://codereview.chromium.org/2146383002
Cr-Commit-Position: refs/heads/master@{#405619}

Former-commit-id: 0adb9749b2374898b245206356ab73cd9224913e